--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Interactive Page</title>
+    <title> JUst For Fun Do You Like ME ..</title>
     <style>
       /* CSS Styles */
 
